fix bug safari with z-index -1

--- a/ecoleinfographie/resources/assets/stylus/components/web_home/web_home.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/web_home/web_home.styl
@@ -112,6 +112,7 @@
   padding-top s(120)
   &:before
     @extend .baseshawl
+    z-index 0
     bottom s(100)
   &__overflowh
     position absolute
